Refactor JAVA controllers and HMI functions